lib/precedent/document.treetop
require File.dirname(__FILE__) + '/paragraph'
require File.dirname(__FILE__) + '/heading'
require File.dirname(__FILE__) + '/meta'

module Precedent
  grammar Document
    include Paragraph
    include Heading
    include Meta

    rule root
      block+
    end

    rule block
      content:(meta / paragraph / heading) block_end
    end

    rule block_end
      blank_lines / eof
    end

    rule blank_lines
      ' '* "\n"+
    end

    rule eof
      !.
    end
  end
end
